// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RssListStore setRssList Duplicate 1`] = `
Array [
  Object {
    "name": "google.com",
    "url": "https://google.com",
  },
]
`;

exports[`RssListStore setRssList Not Regsited 1`] = `
Array [
  Object {
    "name": "google.com",
    "url": "https://google.com",
  },
]
`;

exports[`RssListStore setRssList Not URL 1`] = `null`;

exports[`RssListStore setRssList Registed 1`] = `
Array [
  Object {
    "name": "google.com",
    "url": "https://google.com",
  },
  Object {
    "name": "yahoo.com",
    "url": "https://yahoo.com",
  },
]
`;
